fixed btn issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -90,3 +90,8 @@ footer {
   margin: 5px 0;
   font-weight: normal;
 }
+@media (max-width: 768px) {
+  .logo {
+    font-size: 20px;
+  }
+}
